Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -62,25 +62,34 @@ In this paper, we suggest tackling sensitivity to spatial conditions by generati
 
 \comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} \comment[MLT]{Du coup, ça je le garderais plutôt pour la discussion, à moins que l'on avance des références explicites mais je crois que la sous-section d'après explicite assez bien ce besoin.}
 
-\comment[MLT]{Je propose de reformuler les 3 paragraphes ci-dessous de la manière suivante : The urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects \citep{AllenSanglier1981,Portugali2000,Wilson1981,Wilson2002,Wu2002,Batty2007,AzizAlaouiBertelle2009}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to be (partially) driven by the initial spatial setting, making it difficult to interprete the resulting global structures. At initialisation, we then expect the spatial distribution of agents to influence results in the long run \cite{Castellanoetal2009}. Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). Secondly we expect spatial patterns to influence model outcomes because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.}
-
 \paragraph{Because actual cities are not regular grids}
-Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). At initialisation, we then expect agents to be distributed in different patterns, which influence results in the long run \citep{Castellanoetal2009}. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.
 
-\paragraph{Because the evolution of cities is path dependent}
+\comment[MLT]{Je propose de reformuler les 3 paragraphes ci-dessous plus ou moins de la manière suivante :} The urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects \citep{AllenSanglier1981,Portugali2000,Wilson1981,Wilson2002,Wu2002,Batty2007,AzizAlaouiBertelle2009}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to be (partially) driven by the initial spatial setting, making it difficult to interprete the resulting global structures. At initialisation, we then expect the spatial distribution of agents to influence results in the long run \cite{Castellanoetal2009}. Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). Secondly we expect spatial patterns to influence model outcomes because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled. 
 
-The urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects \citep{AllenSanglier1981,Portugali2000,Wilson1981,Wilson2002,Wu2002,Batty2007,AzizAlaouiBertelle2009}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to be (partially) driven by the initial spatial setting, making it difficult to interprete the resulting global structures. A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
+%\paragraph{Because actual cities are not regular grids}
+%Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). At initialisation, we then expect agents to be distributed in different patterns, which influence results in the long run \citep{Castellanoetal2009}. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.
 
+%\paragraph{Because the evolution of cities is path dependent}
+%The urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects \citep{AllenSanglier1981,Portugali2000,Wilson1981,Wilson2002,Wu2002,Batty2007,AzizAlaouiBertelle2009}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to be (partially) driven by the initial spatial setting, making it difficult to interprete the resulting global structures. A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
 
-
-\paragraph{Because agents are not random walkers}
-
-We expect spatial patterns to influence model outcomes also because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled.
+%\paragraph{Because agents are not random walkers}
+% We expect spatial patterns to influence model outcomes also because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled.
 
 \paragraph{Considerations of urban form in simulation models}
 
-The effect of the spatial configuration on area-based attributes of human behaviours has been largely discussed in geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984,FotheringhamWong1991}. Recently, \citet{Kwan2012} claims for a careful examination of what she coins the uncertain geographic context problem (UGCoP), that is of the spatial configuration of geographical units even if the size and delineation of the area are the same. On the contrary, the scarcity of these considerations in the geographic simulation model literature questions the generalisation of their results, as it has for instance been showed in the case of LUTI models \citep{Thomasetal2017} and of diffusion processes using ABM \citep{LeTexierCaruso2017}. 
-\comment[FL]{Je pense que cette partie est vraiment utile, et devrait être étoffée, en procédant peut être à une typologie plus systématique des "initial condition" qui nous intéressent. Il y a déjà une différence entre l'hétérogénéité de l'espace (densités réparties mono ou poly, etc) et les différentes façons de représenter l'espace (grilles carrées, hexagones). Par ailleurs aussi des discussions sur l'incertitude de l'information (est ce que par exemple les emplois downscalés au carreau INSEE par Pivano 2016 c'est vraiment fiable ou très ?) et la précision de la grille}
+%\comment[FL]{Je pense que cette partie est vraiment utile, et devrait être étoffée, en procédant peut être à une typologie plus systématique des "initial condition" qui nous intéressent. Il y a déjà une différence entre l'hétérogénéité de l'espace (densités réparties mono ou poly, etc) et les différentes façons de représenter l'espace (grilles carrées, hexagones). Par ailleurs aussi des discussions sur l'incertitude de l'information (est ce que par exemple les emplois downscalés au carreau INSEE par Pivano 2016 c'est vraiment fiable ou très ?) et la précision de la grille} 
+
+The effect of the spatial configuration on area-based attributes of human behaviours has been largely discussed in geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984,FotheringhamWong1991}. Recently, \citet{Kwan2012} claims for a careful examination of what she coins the uncertain geographic context problem (UGCoP), that is of the spatial configuration of geographical units even if the size and delineation of the area are the same. Considerations of such issues in the geographic simulation model literature are rather scarce, but they have been some noticeable examples of papers attempting to evaluation the effects of the same set of mechanisms runned from different initial spatial conditions. Mainly, these approaches have been focusing on the impact of geo-localised input data accuracy, of the spatial system shape, precision, and boundaries, as well as of the impact of spatial heterogeneity.
+
+\textbf{Geo-localised input data accuracy:} \citep{Thomasetal2017} show that data selection in LUTI model is interelated to the delineation of the spatial sytem boundaries and scale of analysis. They provide a few examples of how the use of Exploratory Spatial Data Analysis (ESDA) prior to simulation runs help avoiding measurement errors of model behaviour and outcomes.
+
+\textbf{Spatial system shape, precision, and boundaries:} \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents in a Schelling-like model are highest in a rectangular grid and lowest in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favor segregationist behaviours. \citet{LeTexierCaruso2017} simulate an individual-based dynamic model where agents move and exchange coins across regions. Using a set of different theoretical spatial systems, they demonstrate the impact of the regularity and aggregation levels, or centrality/periphery effects, on spatial diffusion dynamics.
+
+\textbf{Spatial heterogeneity:} \citet{StaufferSolomon2007} introduce asymetric interactions and empty residences in Schelling's model run on a large and regular lattice. They reveal conjoint and non-linear effects on the vacancy rates and tolerance levels on segregation patterns. \citet{Gauvinetal2010} run Schelling's segregation process in an open city-lattice to study how the variations in tolerance levels, vacancy rates and city attractiveness may create lines of vacancy lots between clusters of agents. They conclude on the functional role of vacancies, which allow weakly tolerant agents to live and be satisfied in a city environment they nevertheless perceive as hostile. \citet{HatnaBenenson2012} show that their model replications run on a 50x50 torus with 2\% of empty cells were not sensitive to the initial patterns (random and fully segregated distribution of agents).
+
+\textbf{Combination:} \citet{Singhetal2009} show that the segregation patterns obtained by Schelling for certain tolerance values are strictly a small city phenomenon (8x8 city-lattice) and do not work for a larger spatial lattice (100x100), where segregation appears only for certain combinaisons of tolerance threshold and vacancy density values. 
+
+In this paper, we build on the contributions of these previous studies and go further by systematically measuring the impact of the city lattice on model behaviour so far only assessed through a small set of illustrative spatial structures. We illustrate the potential generalization of our approach by running two distinctive agent-based models: Schelling's model of residential segregation and Sugarscape.
 
 %The example of transportation networks is a good illustration, as their spatial shape and hierarchy is strongly influenced by past investment decisions, technical choices, or political decisions sometimes not rational~(\cite{zembri2010new}). Some aggregated indicators will not take into account positions and trajectories of each agent (such as segregation in the Schelling model) but others, as in the case of spatial patterns of accessibility in a system of cities, fully capture the path-dependency and may therefore be highly dependent of the initial spatial configuration. It is not clear for example what shifted the economical and political capital of France from Lyon to Paris in the early Middle Age, some assumptions being the reconfiguration of trade patterns from South to North of Europe and thus an increased centrality for Paris due to its spatial position: the bifurcation induced by socio-economic and political factors took a deep significance with worldwide repercussions until today when magnified by the spatial configuration. \comment[JR]{quelqu'un sait si d'une part c'est vrai et d'autre part si des references backupent ca ? - je sors ca completement du chapeau pour l'instant mais ça me semble intuitivement raisonnable et une bonne illustration.}[(MLT)L'idée de donner un exemple me semble bonne mais je ne suis pas sûre qu'on l'amène de la bonne manière? --> en fait je crois que l'on a pas besoin de ce paragraphe illustratif, ça complique le papier. Qu'en pensez-vous?]  [(FL) : illustrer par les transports c'est une bonne idée mais pas besoin de parler du moyen âge! la faible croissance de Dijon depuis 30 ans peut être une illustration tarte à la crême. mais pas sûr effectivement qu'on ait absolument besoin d'illustration, en tous cas il n'y en a pas dans le § d'avant (bientôt après ;o)]
 
@@ -153,7 +162,7 @@ We use our set of initial density grids in two ``classical'' spatial simulation 
 
 Schelling's model consists in a abstract urban housing market where agents of different nature sense their environment, evaluate their satisfaction in terms of neighbourhood composition, and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tended to produce segregated patterns because of the complexity of their local interactions. The main parameters of this model are the tolerance level (\% of agents similar to {\it ego}), the scope of sensing and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the spatial distribution of housing capacity in this project, using the generated grids. \comment[MLT]{Dans le paragraphe sur Sugarscape on parle du diagramme de phase que l'on étudie en sortie, pas ici. On harmonise dans quel sens?}
 
-%Recent attempts of running Schelling-like models beyond the chessboard grid have proved that migration decisions are not only dependent of what positions agents occupy relative to each other, but also of where they occupy these positions. \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents are highest in a rectangular grid and lowest in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{StaufferSolomon2007} introduce asymetric interactions and empty residences on a large and regular lattice. They reveal conjoint and non-linear effects on the vacancy rates and tolerance levels on segregation patterns. \citet{Singhetal2009} show that the segregation patterns obtained by Schelling for certain tolerance values are strictly a small city phenomenon (8x8 city-lattice) and do not work for a larger spatial lattice (100x100), where segregation appears only for certain combinaisons of tolerance threshold and vacancy density values. \citet{Gauvinetal2010} run Schelling's segregation process in an open city-lattice to study how the variations in tolerance levels, vacancy rates and city attractiveness may create lines of vacancy lots between clusters of agents. They conclude on the functional role of vacancies, which allow weakly tolerant agents to live and be satisfied in a city environment they nevertheless perceive as hostile. \citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favor segregationist behaviours. Interestingly, \citet{HatnaBenenson2012} show that their model replications run on a 50x50 torus with 2\% of empty cells were not sensitive to the initial patterns (random and fully segregated distribution of agents). In this paper, we build on the contributions of these previous studies and go further by systematically measuring the impact of the city lattice on Schelling model behaviour so far only assessed through a small set of illustrative spatial structures. \comment[MLT]{Le remettre en moins détaillé dans l'intro en lien avec les catégories de prise en compte de la forme de la grille.}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%
