--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,5 +1,5 @@
 @article{AllenSanglier1979,
-	title = { A dynamic model of growth in a central place system},
+	title = {A dynamic model of growth in a central place system},
 	volume = {11},
 	journal = {Geographical Analysis},
 	author = {Allen, P. and Sanglier, M.},
@@ -164,7 +164,7 @@
 	title = {The uncertain geographic context problem},
 	volume = {102},
     number = {5},
-	journal = {Annals of the Association of American Geographers,
+	journal = {Annals of the Association of American Geographers},
 	author = {Kwan, M.P.},
 	year = {2012},
 	pages = {958-968}
