--- a/paper.tex
+++ b/paper.tex
@@ -60,24 +60,14 @@ In this paper, we suggest tackling sensitivity to spatial conditions by generati
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Why spatial patterns are expected to impact social simulations}
 
-\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} \comment[MLT]{Du coup, ça je le garderais plutôt pour la discussion, à moins que l'on avance des références explicites mais je crois que la sous-section d'après explicite assez bien ce besoin.}
-
-\comment[MLT]{Je propose de reformuler les 3 paragraphes ci-dessous de la manière suivante : The urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects \citep{AllenSanglier1981,Portugali2000,Wilson1981,Wilson2002,Wu2002,Batty2007,AzizAlaouiBertelle2009}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to be (partially) driven by the initial spatial setting, making it difficult to interprete the resulting global structures. At initialisation, we then expect the spatial distribution of agents to influence results in the long run \cite{Castellanoetal2009}. Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). Secondly we expect spatial patterns to influence model outcomes because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.}
-
-\paragraph{Because actual cities are not regular grids}
-Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). At initialisation, we then expect agents to be distributed in different patterns, which influence results in the long run \citep{Castellanoetal2009}. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.
-
-\paragraph{Because the evolution of cities is path dependent}
-
-The urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects \citep{AllenSanglier1981,Portugali2000,Wilson1981,Wilson2002,Wu2002,Batty2007,AzizAlaouiBertelle2009}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to be (partially) driven by the initial spatial setting, making it difficult to interprete the resulting global structures. A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
+An urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolves irreversibly creating temporal and cumulative effects: self-organization has been shown to be a central feature of urban systems~\citep{AllenSanglier1981,Portugali2000}, and emergent properties at qualitatively differentiated scales~\citep{AzizAlaouiBertelle2009} must be obtained through simulation methods~\citep{Wu2002,Batty2007}. In that frame, complexity is partially due to bifurcations \citep{Wilson1981} which are determinant in spatial systems~\citep{Wilson2002}. \comment[JR]{je suis pas fan des train de citations ; peut-on détailler pour certaines refs au moins ce qu'elles apportent ? - j'ai formulé une proposition.}
+ In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interprete the resulting global structures. \comment[JR]{je suis pour garder le passage sur la non-ergodicité (commenté ci-après) ; ça vous parait trop abstrait ?}
+ % A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
+ At initialisation, we then expect the spatial distribution of agents to influence results in the long run \citep{Castellanoetal2009}. Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). Secondly we expect spatial patterns to influence model outcomes because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision and sensing mechanism are sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.
 
 
 
-\paragraph{Because agents are not random walkers}
-
-We expect spatial patterns to influence model outcomes also because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled.
-
-\paragraph{Considerations of urban form in simulation models}
+\subsection{Considerations of urban form in simulation models}
 
 The effect of the spatial configuration on area-based attributes of human behaviours has been largely discussed in geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984,FotheringhamWong1991}. Recently, \citet{Kwan2012} claims for a careful examination of what she coins the uncertain geographic context problem (UGCoP), that is of the spatial configuration of geographical units even if the size and delineation of the area are the same. On the contrary, the scarcity of these considerations in the geographic simulation model literature questions the generalisation of their results, as it has for instance been showed in the case of LUTI models \citep{Thomasetal2017} and of diffusion processes using ABM \citep{LeTexierCaruso2017}. 
 \comment[FL]{Je pense que cette partie est vraiment utile, et devrait être étoffée, en procédant peut être à une typologie plus systématique des "initial condition" qui nous intéressent. Il y a déjà une différence entre l'hétérogénéité de l'espace (densités réparties mono ou poly, etc) et les différentes façons de représenter l'espace (grilles carrées, hexagones). Par ailleurs aussi des discussions sur l'incertitude de l'information (est ce que par exemple les emplois downscalés au carreau INSEE par Pivano 2016 c'est vraiment fiable ou très ?) et la précision de la grille}
@@ -111,7 +101,7 @@ Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), w
 \begin{figure*}[htbp] \begin{center} 
 \resizebox{0.9\textwidth}{!}{ 
 	\includegraphics{figures/spatialGen.png}
-} \caption{Four examples of grids produced by the spatial generator. The lighter the red, the denser the area. Changing the growth rate $N$ allows to have more or less chaotic shapes corresponding to different levels of convergence of the model, whereas local radius can be tuned with the interplay of aggregation strength $\alpha$ and diffusion strength $\beta$.} \label{fig:spatialGen} \end{center} \end{figure*} %
+} \caption{Four examples of grids produced by the spatial generator. The lighter the red, the denser the area. Changing the growth rate $N$ allows to have more or less chaotic shapes (two first compared to the two last grids for example) corresponding to different levels of convergence of the model, whereas local radius can be tuned with the interplay of aggregation strength $\alpha$ and diffusion strength $\beta$.} \label{fig:spatialGen} \end{center} \end{figure*} %
 %%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -233,9 +223,13 @@ We now check the sensitivity in terms of qualitative behavior of phase diagrams.
 \section{Discussion}
 %%%%%%%%%%%%%%%%%%%%%%
 
+
+
 \comment[FL]{NetLogo qui influence la formalisation de l'espace dans les modèles alors que formalisation de ce dernier peut être plus poussée dans la description du modèle original.}[(JR) bonne idée, y'a pas mal d'exemples ou il faut pas mal contourner l'usage ``naturel'' de Netlogo pour s'en sortir - sur les représentations raster/vecteur c'est souvent un dilemne et ça peut induire des biais d'implémentation - je vais essayer de trouver un exemple simple (ceux que j'ai là trop usine à gaz, exemple Lutecia)]
 
 \comment[MLT]{Au-delà de l'outil NetLogo, parler de la formalisation de l'espace par les physiciens qui a influencé les modèles en géographie (cf: commentaire de Florent que je propose de bouger ici)?}
+
+\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} \comment[MLT]{Du coup, ça je le garderais plutôt pour la discussion, à moins que l'on avance des références explicites mais je crois que la sous-section d'après explicite assez bien ce besoin.}
 
 
 \paragraph{Comparing phase diagrams}
